--- a/root/sdf/css/style.css
+++ b/root/sdf/css/style.css
@@ -326,7 +326,7 @@ input[type=submit],input[type=button]{
   align-items: center;
 }
 
-#formContentAcoount{
+#formContentAccount{
   -webkit-box-shadow: 0px 2px 1px 1px rgba(224,221,224,1);
   -moz-box-shadow: 0px 2px 1px 1px rgba(224,221,224,1);
   box-shadow: 0px 2px 1px 1px rgba(224,221,224,1);
